# FlashCard_AIChatbot

./: .flake8  .isort.cfg  .pre-commit-config.yaml  README.md  docker-compose.production.yml  docker-compose.yml  env.example
app/: settings.py  urls.py
core/: celery_client.py  constant.py  exceptions.py  filters.py  jwt.py  mail.py  managers.py  models.py  paginators.py  querysets.py  tasks.py  utils.py  validators.py
core/grpc/: grpc_client.py  notification.proto
core/middlewares/: active_account.py  authenticate.py  check_token_version.py  translate.py
core/migrations/: 0001_create_users_table.py  0002_create_notifications_table.py  0003_add_token_version_to_users_table.py  0004_question_answer_quiz_quizquestion_quizquestionanswer_and_more.py  0005_rename_createat_set_create_at_and_more.py  0006_rename_is_delete_set_is_deleted_remove_set_created_and_more.py  0007_rename_create_at_set_created_at_and_more.py  0008_rename_is_public_quiz_is_published_and_more.py  0009_alter_quizquestion_type.py  0010_testanswer_text_answer_alter_test_started_at_and_more.py  0011_testanswer_selected_answers_and_more.py  0012_alter_quizquestion_question.py  0013_test_current_session_start_alter_question_type_and_more.py  0014_remove_user_username_user_email.py  0015_user_otp_user_otp_created_at.py  0016_quiz_time_limit.py  0017_quiz_allow_resuming.py  0018_aichatconversation_aichatmessage.py  0019_alter_aichatconversation_quiz.py  0020_alter_aichatmessage_role.py  0021_alter_user_avatar.py
core/mixins/: path_mixin.py
core/serializers/: ai_serializers.py  (+9 more)
nginx/: default.conf.example
services/nfc_flask/: Dockerfile  Dockerfile.prod  env.example  pyproject.toml
services/notification/: .dockerignore  pyproject.toml
services/notification/apis/: apps.py  documents.py  urls.py  views.py
(+118 files in other folders)
