[tool.poetry]
name = "nfc-kingdom"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
flask-jwt-extended = "^4.7.1"
flask-cors = "^5.0.1"
fakeredis = "^2.27.0"
jwt = "^1.3.1"
werkzeug = "^3.1.3"
flasgger = "^0.9.7.1"
opencv-python = "^4.11.0.86"
pillow = "^11.1.0"
flask-sqlalchemy = "^3.1.1"
flask-marshmallow = "^1.3.0"
pyodbc = "^5.2.0"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
